Release 2.2 (2007.02.24) [release-2.2]

2007.02.20 (Julien Ponge)
* Updated Win32 binary: static Qt linking, no mingw dependency and UPX
  compression.

Release 2.1 (2006.09.20) [release-2.1]

2006.08.23 (Julien Ponge)
* Updated Win32 binary.

2006.07.23 (Julien Ponge)
* launcher.cpp, main.cpp: fixes on the interpretation of the QProcess:execute()
  return values. The launcher should be running fine now.
* Mac OS X: build universal binaries.
* Mac OS X: script to embed the Qt libraries inside the application bundle.

2006.07.22 (Julien Ponge)
* main.cpp: fix for stupid error that disables the JRE radio button if a JRE
  is provider, and enables it when it is not.

Release 2.0 (2005.10.27) [release-2.0]

* New Qt-based launcher.