@@ -1,8 +1,8 @@
 The IzPack Launcher
-http://www.izforge.com/izpack/
-http://developer.berlios.de/projects/izpack/
+http://izpack.org/
+http://izpack.codehaus.org/
 
-Copyright (c) 2004, 2005 Julien Ponge - All rights reserved.
+Copyright (c) 2004 - 2008 Julien Ponge - All rights reserved.
 
 Redistribution and use in source (XML DocBook) and 'compiled' forms (XML,
 (X)HTML, PDF, PostScript, RTF and so forth) with or without modification, are
