@@ -1,9 +1,9 @@
 /* 
  * The IzPack Launcher
- * http://www.izforge.com/izpack/
- * http://developer.berlios.de/projects/izpack/
+ * http://izpack.org/
+ * http://izpack.codehaus.org/
  * 
- * Copyright (c) 2004, 2005 Julien Ponge - All rights reserved.
+ * Copyright (c) 2004 - 2008 Julien Ponge - All rights reserved.
  * 
  * Permission is hereby granted, free of charge, to any person obtaining a copy
  * of this software and associated documentation files (the "Software"), to
